--- a/css/scrumproject.css
+++ b/css/scrumproject.css
@@ -3,3 +3,16 @@
 	padding: 20px;
 	margin-bottom: 20px;
 }
+
+.toggle-more-btn{
+	margin-right: 0.7em;
+	cursor: pointer;
+}
+
+tr.toggle-line-display{
+	display: none;
+}
+
+tr.toggle-line-display.--open{
+	display: table-row;
+}
