--- a/css/kanban.css
+++ b/css/kanban.css
@@ -38,7 +38,17 @@
 	padding: 10px;
 }
 
-
+.kanban-list-add-button{
+	background-color: #4CAF50;
+	border: none;
+	color: white;
+	padding: 7px 15px;
+	margin: 10px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+}
 
 /**
 * Drop down
