--- a/css/kanban.css
+++ b/css/kanban.css
@@ -1,4 +1,21 @@
+*{
+	box-sizing: border-box;
+}
+
+html, body.scrumkanban-page, section.kanban{
+	min-height: 100%;
+	margin: 0px;
+	padding: 0px;
+	min-height: 100%;
+}
+
+section.kanban{
+
+}
+
 .kanban-header{
+	box-sizing: border-box;
+	position: relative;
 	padding: 10px;
 	margin: 10px;
 	background: rgba(226,228,230,0.85);
@@ -12,7 +29,11 @@
 	--box-border-radius : 4px;
 	--box-shadow: 1px 1px 1px rgba(0,0,0,0.1);
 
-	padding: 5px;
+	padding: 0 5px 20px 5px;
+
+	position: relative;
+	max-width: 100%;
+	overflow: auto;
 }
 
 .scrumkanban-page{
@@ -98,14 +119,36 @@
 #scrum-kanban .kanban-item{
 	box-shadow: var(--box-shadow), inset 5px 0px 0px 0 var(--kanban-item-color, #fff);
 }
-.kanban-item[data-type="card"]{
+.kanban-item[data-type="scrum-card"]{
 	--kanban-item-color : #a9a9a9;
 }
 
-.kanban-item[data-type="user-story"]{
+.kanban-item[data-type="scrum-user-story"]{
 	--kanban-item-color : #e34f00;
 }
 
-.kanban-item[data-type="user-story-task"]{
+.kanban-item[data-type="scrum-user-story-task"]{
 	--kanban-item-color : #d0b400;
 }
+
+/*
+* Scroll barr
+ */
+::-webkit-scrollbar {
+	width: 8px;
+	height: 8px;
+}
+
+::-webkit-scrollbar-track {
+	background-color: rgba(0, 0, 0, 0.1);
+	border-radius:  10px;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius:  10px;
+	background: rgba(197, 197, 197, 0.85);
+}
+
+/*::-webkit-scrollbar-thumb:window-inactive {*/
+/*	background: rgba(0, 0, 0, 0.1)*/
+/*}*/
