--- a/css/kanban.css
+++ b/css/kanban.css
@@ -1,5 +1,7 @@
 :root{
 	--backdrop-filter-blur-radius : 5px;
+	--box-border-radius : 4px;
+	--box-shadow: 1px 1px 1px rgba(0,0,0,0.1);
 }
 
 
@@ -34,8 +36,6 @@ section.kanban{
 }
 
 #scrum-kanban{
-	--box-border-radius : 4px;
-	--box-shadow: 1px 1px 1px rgba(0,0,0,0.1);
 
 	padding: 0 5px 20px 5px;
 
@@ -67,77 +67,9 @@ section.kanban{
 
 
 /*
-* Kanban style override
-*/
-#scrum-kanban .kanban-board {
-	background: rgba(226,228,230,0.5);
-	border-radius: var(--box-border-radius);
-	box-shadow: var(--box-shadow);
-	overflow: hidden;
-
-
-	-webkit-backdrop-filter: blur(var(--backdrop-filter-blur-radius));
-	backdrop-filter: blur(var(--backdrop-filter-blur-radius));
-}
-
-#scrum-kanban .kanban-item {
-	border-radius: var(--box-border-radius);
-	box-shadow: var(--box-shadow);
-	margin-bottom: 10px;
-}
-
-#scrum-kanban .kanban-drag{
-	padding: 10px;
-}
-
-.kanban-list-add-button{
-	background-color: #4CAF50;
-	border: none;
-	color: white;
-	padding: 7px 15px;
-	margin: 10px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-}
-
-/**
-* Drop down
- */
-
-/* The whole thing */
-.context-dropdown-menu {
-	display: none;
-	z-index: 1000;
-	position: absolute;
-	overflow: hidden;
-	border: 1px solid #CCC;
-	white-space: nowrap;
-	font-family: sans-serif;
-	background: #FFF;
-	color: #333;
-	border-radius: 5px;
-	padding: 0;
-}
-
-/* Each of the items in the list */
-.context-dropdown-menu li {
-	padding: 8px 12px;
-	cursor: pointer;
-	list-style-type: none;
-	transition: all .3s ease;
-	user-select: none;
-}
-
-.context-dropdown-menu li:hover {
-	background-color: #DEF;
-}
-
-/*
 * Kanban item
 */
-#scrum-kanban .kanban-item{
+.scrumkanban-page .kanban-item{
 	box-shadow: var(--box-shadow), inset 5px 0px 0px 0 var(--kanban-item-color, #fff);
 }
 .kanban-item[data-type="scrum-card"]{
@@ -180,3 +112,98 @@ section.kanban{
 /*}*/
 
 
+
+
+/*
+* Kanban style override
+*/
+.scrumkanban-page .kanban-board {
+	background: rgba(226,228,230,0.5);
+	border-radius: var(--box-border-radius) !important;
+	box-shadow: var(--box-shadow);
+	overflow: hidden;
+
+
+	-webkit-backdrop-filter: blur(var(--backdrop-filter-blur-radius));
+	backdrop-filter: blur(var(--backdrop-filter-blur-radius));
+}
+
+
+
+.scrumkanban-page  .kanban-item {
+	border-radius: var(--box-border-radius);
+	box-shadow: var(--box-shadow);
+	margin-bottom: 10px;
+}
+
+.scrumkanban-page  .kanban-drag{
+	padding: 10px;
+}
+
+.kanban-list-add-button{
+	background-color: #4CAF50;
+	border: none;
+	color: white;
+	padding: 7px 15px;
+	margin: 10px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+}
+
+.scrumkanban-page .kanban-board .kanban-drag {
+	padding: 10px;
+}
+
+/*
+* Dolibarr JQuery dialog override
+ */
+.scrumkanban-page .ui-widget-header{
+	border: none;
+	border-bottom: 1px solid #ececec;
+	color: #333333;
+	font-weight: normal;
+
+	background: none;
+	border-radius: 0;
+}
+
+.scrumkanban-page button.ui-button, .scrumkanban-page button.ui-button:focus  {
+	border: 1px solid #c5c5c5;
+	background: none;
+	border : none;
+}
+.scrumkanban-page button.ui-button:focus  {
+	border: 1px solid #c5c5c5;
+}
+
+/*
+* Dolibarr JNotify override
+ */
+
+.scrumkanban-page  .jnotify-container .jnotify-notification .jnotify-background{
+	border-radius: 0px;
+	opacity: 1 !important;
+}
+
+.scrumkanban-page  .jnotify-container .jnotify-notification-error .jnotify-background{
+	background-color: rgba(163, 0, 0, 0.78) !important;
+	-webkit-backdrop-filter: blur(2px);
+	backdrop-filter: blur(2px);
+}
+
+.scrumkanban-page  .jnotify-container .jnotify-notification .jnotify-background{
+	background-color: rgba(41, 163, 0, 0.78) !important;
+	-webkit-backdrop-filter: blur(2px);
+	backdrop-filter: blur(2px);
+}
+
+.scrumkanban-page  .jnotify-container .jnotify-notification-error .jnotify-close,.scrumkanban-page  .jnotify-container .jnotify-notification-error .jnotify-message,
+.scrumkanban-page  .jnotify-container .jnotify-notification .jnotify-close,.scrumkanban-page  .jnotify-container .jnotify-notification .jnotify-message{
+	color: #fff !important;
+}
+
+.scrumkanban-page  div.jnotify-background {
+	box-shadow: 2px 2px 5px rgba(0,0,0,.3) !important;
+}
