--- a/css/kanban.css
+++ b/css/kanban.css
@@ -2,6 +2,11 @@
 	--backdrop-filter-blur-radius : 5px;
 	--box-border-radius : 4px;
 	--box-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+	--default-space-size: 10px;
+	--default-block-background-color : rgba(226,228,230,0.8);
+	--default-strong-color : #223058;
+
+	--box-text-color : #626262;
 }
 
 
@@ -9,85 +14,27 @@
 	box-sizing: border-box;
 }
 
-html, body.scrumkanban-page, section.kanban{
+html{
 	min-height: 100%;
+	margin: 0px;
+	padding: 0px;
+}
+
+body.scrumkanban-page{
+	height: 100vh;
+	width: 100vw;
 	margin: 0px;
 	padding: 0px;
 	min-height: 100%;
 }
 
-section.kanban{
-
+section#kanban{
+	max-height: 100%;
+	min-height: 100%;
+	margin: 0px;
+	padding: 0px;
 }
 
-.kanban-header{
-	box-sizing: border-box;
-	position: relative;
-	padding: 10px;
-	margin: 10px;
-	background: rgba(226,228,230,0.5);
-
-	-webkit-backdrop-filter: blur(var(--backdrop-filter-blur-radius));
-	backdrop-filter: blur(var(--backdrop-filter-blur-radius));
-}
-
-.kanban-title__label{
-	font-weight: normal;
-}
-
-#scrum-kanban{
-
-	padding: 0 5px 20px 5px;
-
-	position: relative;
-	max-width: 100%;
-	overflow: auto;
-}
-
-.scrumkanban-page{
-	/*TODO : remove backgroud external image keep only for testing */
-	background-image: url("../img/backgrounds/purple-flower.jpg");
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-
-.kanban-board-header {
-	-webkit-backdrop-filter: blur(var(--backdrop-filter-blur-radius));
-	backdrop-filter: blur(var(--backdrop-filter-blur-radius));
-}
-
-.kankan-default-header{
-	background: rgba(70, 220, 29, 0.44);
-	color: #fff;
-}
-
-
-
-
-/*
-* Kanban item
-*/
-.scrumkanban-page .kanban-item{
-	box-shadow: var(--box-shadow), inset 5px 0px 0px 0 var(--kanban-item-color, #fff);
-}
-.kanban-item[data-type="scrum-card"]{
-	--kanban-item-color : #a9a9a9;
-}
-
-.kanban-item[data-type="scrum-user-story"]{
-	--kanban-item-color : #e34f00;
-}
-
-.kanban-item[data-type="scrum-user-story-task"]{
-	--kanban-item-color : #d0b400;
-}
-
-.kanban-item__status{
-	display: block;
-	font-size: 0.8em;
-}
 
 /*
 * Scroll barr
@@ -114,11 +61,122 @@ section.kanban{
 
 
 
+
+.kanban-header{
+	display: block;
+	position: sticky;
+	top:0px;
+	z-index: 1000;
+
+
+	padding: var(--default-space-size);
+	margin-bottom: var(--default-space-size);
+	background: var(--default-block-background-color);
+
+	-webkit-backdrop-filter: blur(var(--backdrop-filter-blur-radius));
+	backdrop-filter: blur(var(--backdrop-filter-blur-radius));
+}
+
+.kanban-title__label{
+	font-weight: normal;
+}
+
+.nav-button{
+	cursor: pointer;
+	border: none;
+	padding: 7px 7px;
+	margin: 0;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 14px;
+	border-radius: var(--box-border-radius);
+
+	background-color: rgba(255,255,255,0);
+	color: var(--box-text-color);
+}
+.nav-button:hover{
+	background-color: rgba(255,255,255,0.3);
+}
+
+/* KANBAN */
+
+#scrum-kanban{
+
+	padding: 0 5px 20px 5px;
+
+	position: relative;
+	max-width: 100%;
+	min-height: calc(100vh - 100px);
+	overflow: auto;
+
+	/* For drag to scroll */
+	cursor: grab;
+
+	/* disable text selection */
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none; /* Safari */
+	-khtml-user-select: none; /* Konqueror HTML */
+	-moz-user-select: none; /* Old versions of Firefox */
+	-ms-user-select: none; /* Internet Explorer/Edge */
+	user-select: none; /* Non-prefixed version, currently*/
+}
+
+.scrumkanban-page{
+	background-image: url("../img/backgrounds/purple-flower.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+}
+
+
+.kanban-board-header {
+
+}
+
+.kankan-default-header{
+	background: rgba(70, 220, 29, 0);
+	color: var(--default-strong-color);
+
+	/*-webkit-backdrop-filter: blur(var(--backdrop-filter-blur-radius));*/
+	/*backdrop-filter: blur(var(--backdrop-filter-blur-radius));*/
+}
+
+.kanban-container{
+	--list-text-color : var(--box-text-color);
+}
+
+
+/*
+* Kanban item
+*/
+.scrumkanban-page .kanban-item{
+	box-shadow: var(--box-shadow), inset 5px 0px 0px 0 var(--kanban-item-color, #fff);
+}
+.kanban-item[data-type="scrum-card"]{
+	--kanban-item-color : #a9a9a9;
+}
+
+.kanban-item[data-type="scrum-user-story"]{
+	--kanban-item-color : #e34f00;
+}
+
+.kanban-item[data-type="scrum-user-story-task"]{
+	--kanban-item-color : #d0b400;
+}
+
+.kanban-item__status{
+	display: block;
+	font-size: 0.8em;
+}
+
+
 /*
 * Kanban style override
 */
 .scrumkanban-page .kanban-board {
-	background: rgba(226,228,230,0.5);
+	background: var(--default-block-background-color);
 	border-radius: var(--box-border-radius) !important;
 	box-shadow: var(--box-shadow);
 	overflow: hidden;
@@ -128,32 +186,48 @@ section.kanban{
 	backdrop-filter: blur(var(--backdrop-filter-blur-radius));
 }
 
+.scrumkanban-page  .kanban-board.is-moving.gu-mirror .kanban-drag {
+	padding-right: var(--default-space-size); /* fix strange behavior */
+}
+
+.scrumkanban-page  .kanban-board-header{
+	padding: var(--default-space-size);
+}
 
 
 .scrumkanban-page  .kanban-item {
 	border-radius: var(--box-border-radius);
-	box-shadow: var(--box-shadow);
-	margin-bottom: 10px;
+	margin-bottom: var(--default-space-size);
 }
 
 .scrumkanban-page  .kanban-drag{
-	padding: 10px;
+	padding: var(--default-space-size);
 }
 
 .kanban-list-add-button{
-	background-color: #4CAF50;
 	border: none;
-	color: white;
-	padding: 7px 15px;
-	margin: 10px;
+	padding: 7px 7px;
+	margin: 0 var(--default-space-size) var(--default-space-size) var(--default-space-size) ;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 16px;
+	font-size: 14px;
+	border-radius: var(--box-border-radius);
+
+	background-color: rgba(255,255,255,0);
+	color: var(--list-text-color);
+}
+.kanban-list-add-button:hover{
+	background-color: rgba(255,255,255,0.3);
 }
 
 .scrumkanban-page .kanban-board .kanban-drag {
-	padding: 10px;
+	padding: var(--default-space-size);
+}
+
+.scrumkanban-page .kanban-board header{
+	font-size: 14px;
+	padding-bottom: 0px;
 }
 
 /*
