--- a/css/kanban.css
+++ b/css/kanban.css
@@ -65,13 +65,6 @@ section#kanban{
 /*	background: rgba(0, 0, 0, 0.1)*/
 /*}*/
 
-/* Scroll barr for list */
-.kanban-drag {
-	scrollbar-width: 5px;
-	--scrollbar-size: 5px;
-	--scrollbar-track-color : rgba(0, 0, 0, 0.08);
-	--scrollbar-thumb-color : rgba(0, 0, 0, 0.3);
-}
 
 
 /* HEADER */
@@ -146,7 +139,7 @@ section#kanban{
 
 
 .kanban-board-header {
-
+	--color-border-size : 3px;
 }
 
 .kankan-default-header{
@@ -157,15 +150,27 @@ section#kanban{
 	/*backdrop-filter: blur(var(--backdrop-filter-blur-radius));*/
 }
 
+.kankan-backlog-header{
+	box-shadow: inset 0 var(--color-border-size) 0 0 rgb(8 147 163);
+	color: var(--default-strong-color);
+}
+
+.kankan-done-header{
+	box-shadow: inset 0 var(--color-border-size) 0 0 rgb(102 163 8);
+	color: var(--default-strong-color);
+}
+
 .kanban-container{
 	--list-text-color : var(--box-text-color);
 }
+
 
 
 /*
 * Kanban item
 */
 .scrumkanban-page .kanban-item{
+	position: relative;
 	box-shadow: var(--box-shadow), inset 5px 0px 0px 0 var(--kanban-item-color, #fff);
 }
 .kanban-item[data-type="scrum-card"]{
@@ -180,15 +185,53 @@ section#kanban{
 	--kanban-item-color : #d0b400;
 }
 
-.kanban-item__status{
-	display: block;
-	font-size: 0.8em;
-}
-
 .kanban-drag{
+	scrollbar-width: 5px;
+	--scrollbar-size: 5px;
+	--scrollbar-track-color : rgba(0, 0, 0, 0.08);
+	--scrollbar-thumb-color : rgba(0, 0, 0, 0.3);
+
 	max-height: calc(100vh - 180px);
 	overflow: auto;
 }
+.kanban-item__users{
+	position: absolute;
+	overflow: hidden;
+	right: 0;
+	bottom: 0;
+}
+
+.kanban-item__user{
+	--user-image-size : 32px;
+	max-height: var(--user-image-size);
+	border-radius: var(--user-image-size);
+
+	margin-right: calc(var(--user-image-size)/-2);
+	margin-bottom: calc(var(--user-image-size)/-3.5);
+
+	background: #949494;
+	border:3px solid #ededed;
+}
+.kanban-item__user:last-child{
+	margin-right: calc(var(--user-image-size)/-3.5);
+}
+
+.kanban-item__time-spend{
+	color: var(--box-text-color);
+	font-size: 0.9em;
+}
+
+.kanban-item__time-spend .fa{
+	font-size: 0.8em;
+	vertical-align: center;
+}
+
+
+.kanban-item__status{
+	font-size: 0.8em;
+}
+
+
 
 /*
 * Kanban style override
@@ -209,7 +252,8 @@ section#kanban{
 }
 
 .scrumkanban-page  .kanban-board-header{
-	padding: var(--default-space-size);
+	position: relative;
+	padding: 7px var(--default-space-size);
 }
 
 
@@ -218,8 +262,13 @@ section#kanban{
 	margin-bottom: var(--default-space-size);
 }
 
-.scrumkanban-page  .kanban-drag{
-	padding: var(--default-space-size);
+.scrumkanban-page  .kanban-board header .kanban-title-board{
+	display: block;
+	position: relative;
+	max-width: calc(100% - 30px);
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .kanban-list-add-button{
@@ -237,15 +286,16 @@ section#kanban{
 }
 .kanban-list-add-button:hover{
 	background-color: rgba(255,255,255,0.3);
+	color: #313131;
 }
 
 .scrumkanban-page .kanban-board .kanban-drag {
-	padding: var(--default-space-size);
+	margin-right: calc(var(--default-space-size)/2) ;
+	padding: var(--default-space-size)  calc(var(--default-space-size)/2) var(--default-space-size) var(--default-space-size) ;
 }
 
 .scrumkanban-page .kanban-board header{
 	font-size: 14px;
-	padding-bottom: 0px;
 }
 
 /*
