--- a/css/kanban.css
+++ b/css/kanban.css
@@ -7,12 +7,14 @@
 	--default-strong-color : #223058;
 
 	--box-text-color : #626262;
+	--box-text-color-hover : #444444;
 
 	--scrollbar-size : 11px;
 	--scrollbar-track-color : rgba(0, 0, 0, 0.1);
 	--scrollbar-thumb-color : rgba(197, 197, 197, 0.85);
 
 	--list-text-color : var(--box-text-color);
+	--list-text-color-hover : var(--box-text-color-hover);
 }
 
 
@@ -399,6 +401,15 @@ section#kanban{
 *  highlight system
 */
 
+.highlight-scrum-task{
+	margin-left: 7px;
+	color: var(--list-text-color);
+}
+
+.highlight-scrum-task:hover{
+	color: var(--list-text-color);
+}
+
 #modal-background {
 	display: none;
 	position: fixed;
@@ -413,7 +424,14 @@ section#kanban{
 	display: block;
 }
 
+.bringdown-element{
+	opacity: 0.5;
+}
+
 .highlight-element{
 	position: relative;
 	z-index: 100;
+}
+.highlight-element.kanban-item{
+	opacity: 1 !important;
 }
