--- a/css/kanban.css
+++ b/css/kanban.css
@@ -3,7 +3,7 @@
 	--box-border-radius : 2px;
 	--box-shadow: 1px 1px 1px rgba(0,0,0,0.2);
 	--default-space-size: 10px;
-	--default-block-background-color : rgba(226,228,230,0.8);
+	--default-block-background-color : rgba(234,234,234,0.87);
 	--default-strong-color : #223058;
 
 	--box-text-color : #626262;
@@ -513,19 +513,31 @@ section#kanban{
 	content: "\f070";
 }
 
-#modal-background {
+
+
+
+.small-notify {
 	display: none;
 	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+	bottom: 40px;
+	left: 50%;
+	transform: translateX(-50%);
+	margin: 0 auto;
+	max-width: 360px;
 	background-color: rgba(0,0,0,.7);
+	border-radius: 100vmax;
+	background-color: rgb(0 0 0 / 0.4);
+	padding: 5px 30px;
+	z-index: 9999;
+	color: #ffffff;
 }
 
-#modal-background.active {
+.small-notify.--active {
 	display: block;
+	animation: slide-up 0.2s forwards, fade-in 0.2ms forwards;
 }
+
+
 
 
 .highlight-element{
@@ -607,4 +619,35 @@ section#kanban{
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
 	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
 	opacity: 1;
+}
+
+
+/** ANIMATION **/
+
+@keyframes slide-up {
+	0% {
+		transform: translateY(100%);
+	}
+	100% {
+		transform: translateY(0%);
+	}
+}
+
+
+@keyframes fade-in {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+@keyframes fade-out {
+	0% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
 }
