--- a/css/kanban.css
+++ b/css/kanban.css
@@ -64,6 +64,10 @@
 	margin-bottom: var(--default-space-size);
 }
 
+.scrumkanban-page  .kanban-item.gu-mirror {
+	box-shadow: 10px 10px 10px rgba(0,0,0,0.2);
+}
+
 .scrumkanban-page  .kanban-board header .kanban-title-board{
 	display: block;
 	position: relative;
