--- a/css/kanban.css
+++ b/css/kanban.css
@@ -30,6 +30,8 @@
 	--list-button-hover-color: var(--list-button-default-color);
 
 	--edge-size: 0.5em;
+
+	/* attention le clip fait aussi sauter les ombres */
 	--default-clip-path :  polygon(
 			var(--edge-size) 0%,
 			100% 0,
@@ -60,8 +62,6 @@ dialog.kanban-dialog{
 	color:var(--dialog-text-color);
 	background-color: var(--dialog-background-color );
 	padding: 0;
-
-	clip-path: var(--default-clip-path);
 }
 
 dialog.kanban-dialog::backdrop{
@@ -98,11 +98,17 @@ dialog.kanban-dialog[open]{
 
 
 
+
 html[data-theme-color-scheme="dark"] dialog.kanban-dialog{
 	--dialog-text-color : #ededed;
 	--dialog-background-color:rgba(57, 67, 84);
 }
-
+html[data-theme-color-scheme="dark"] dialog.kanban-dialog.--danger{
+	box-shadow: 1px 1px 3px 0 rgb(0 0 0 / 60%),
+	0 15px 0 -10px rgb(116 0 0 / 80%),
+	15px 0 0 -10px rgb(116 0 0 / 80%),
+	0 0 10px 0 rgb(0 0 0 / 60%);
+}
 
 /*
 * Buttons
@@ -113,7 +119,7 @@ button.kanban-btn {
 	--button-color :   #333333;
 	background-color: var(--button-background-color);
 	color: var(--button-color);
-	border-radius: 8px;
+	border-radius: 2px;
 	border-width: 0;
 	cursor: pointer;
 	display: inline-block;
@@ -133,8 +139,56 @@ button.kanban-btn {
 	touch-action: manipulation;
 }
 
+button.kanban-btn[data-btn-role="accept"]{
+	font-weight: bold;
+	--button-background-color :  var(--butactionbg);
+	--button-color :   #fff;
+	filter: saturate(60%);
+}
+button.kanban-btn[data-btn-role="accept"]:hover{
+	--button-background-color :  var(--butactionbg);
+	--button-color :   #fff;
+	filter: saturate(100%);
+	filter: hue-rotate(5deg);
+}
+
+button.kanban-btn[data-btn-role="cancel"]{
+	--button-background-color :  rgba(51, 51, 51, 0);
+	--button-color : #595959;
+}
+button.kanban-btn[data-btn-role="cancel"]:hover{
+	--button-background-color :  rgba(51, 51, 51, 0.05);
+	--button-color :   #333333;
+}
+
+html[data-theme-color-scheme="dark"] button[data-btn-role="cancel"]{
+	--button-color : #a7a7a7;
+}
+html[data-theme-color-scheme="dark"] button[data-btn-role="cancel"]:hover{
+	--button-background-color :  rgba(0, 0, 0, 0.1);
+	--button-color : #cbcbcb;
+}
+
+
 button.kanban-btn:hover {
 	--button-background-color :  rgba(51, 51, 51, 0.2);
+	--button-color :   #333333;
+}
+
+dialog.kanban-dialog.--danger footer button.kanban-btn[data-btn-role="accept"]{
+	--button-background-color : rgb(114, 0, 0);
+	--button-color :   #fff;
+}
+dialog.kanban-dialog.--danger footer button.kanban-btn[data-btn-role="accept"]:hover{
+	--button-background-color : rgb(150, 0, 0);
+	--button-color :   #fff;
+}
+
+html[data-theme-color-scheme="dark"] dialog.kanban-dialog.--danger footer button[data-btn-role="accept"]{
+	--button-background-color : rgba(114, 0, 0, 0.5);
+}
+html[data-theme-color-scheme="dark"] dialog.kanban-dialog.--danger footer button[data-btn-role="accept"]:hover{
+	 --button-background-color : rgba(114, 0, 0, 0.8);
 }
 
 
