--- a/css/kanban.css
+++ b/css/kanban.css
@@ -427,6 +427,17 @@ section#kanban{
 	margin-left: 7px;
 }
 
+/**
+* NAV
+ */
+
+
+nav.top-nav-bar{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
 .nav-button{
 	cursor: pointer;
 	border: none;
