--- a/css/kanban.css
+++ b/css/kanban.css
@@ -260,7 +260,6 @@ button.kanban-btn {
 	-webkit-user-select: none;
 	touch-action: manipulation;
 }
-
 button.kanban-btn[data-btn-role="accept"]{
 	font-weight: bold;
 	--button-background-color :  var(--butactionbg);
@@ -273,6 +272,12 @@ button.kanban-btn[data-btn-role="accept"]:hover{
 	filter: saturate(100%);
 	filter: hue-rotate(5deg);
 }
+
+button.kanban-btn[disabled]{
+	opacity: 0.3;
+	cursor: not-allowed;
+}
+
 
 button.kanban-btn[data-btn-role="cancel"]{
 	--button-background-color :  rgba(51, 51, 51, 0);
